Making separate classes for the creators for Volumes 1 and 2 and having them share a parent class called MakePretty

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-craneGeneology.aux
-craneGeneology.log
-craneGeneologyBook.iml
-misc.xml
-modules.xml
-testBook.aux
-testBook.synctex.gz
-testBook.toc
-vcs.xml
-testBook.log
+*.aux
+*.log
+*.gz
+*.toc
+.idea/*
